UPDATE: readme file